--- a/src/Launcher/Launcher.csproj
+++ b/src/Launcher/Launcher.csproj
@@ -86,16 +86,16 @@
     <Reference Include="System.Web" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="api\JuicyTilesSetupHandlers.cs" />
-    <Compile Include="api\LauncherHelper.cs" />
-    <Compile Include="api\MainHandlers.cs" />
+    <Compile Include="Api\JuicyTilesSetupHandlers.cs" />
+    <Compile Include="Api\LauncherHelper.cs" />
+    <Compile Include="Api\MainHandlers.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="viewmodels\Launcher.json.cs">
-      <DependentUpon>Launcher.json</DependentUpon>
-    </Compile>
-    <Compile Include="viewmodels\LauncherPage.json.cs">
+    <Compile Include="ViewModels\LauncherPage.json.cs">
       <DependentUpon>LauncherPage.json</DependentUpon>
+    </Compile>
+    <Compile Include="ViewModels\LauncherWrapperPage.json.cs">
+      <DependentUpon>LauncherWrapperPage.json</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -104,8 +104,8 @@
     <Content Include="wwwroot\Launcher\elements\launcher-hot-key\launcher-hot-key.html" />
     <Content Include="wwwroot\Launcher\elements\launcher-launchpad\launcher-launchpad.html" />
     <Content Include="wwwroot\Launcher\elements\launcher-layout\launcher-main.html" />
-    <Content Include="wwwroot\Launcher\LauncherMenu.html" />
-    <Content Include="wwwroot\Launcher\LauncherTemplate.html" />
+    <Content Include="wwwroot\Launcher\viewmodels\LauncherMenu.html" />
+    <Content Include="wwwroot\Launcher\viewmodels\LauncherTemplate.html" />
     <Content Include="wwwroot\Launcher\viewmodels\ResultPage.html" />
     <Content Include="wwwroot\Launcher\viewmodels\SearchPreviewPage.html" />
   </ItemGroup>
@@ -128,12 +128,12 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <TypedJSON Include="viewmodels\Launcher.json">
+    <TypedJSON Include="ViewModels\LauncherPage.json">
       <Generator>MsBuild:Compile</Generator>
     </TypedJSON>
   </ItemGroup>
   <ItemGroup>
-    <TypedJSON Include="viewmodels\LauncherPage.json">
+    <TypedJSON Include="ViewModels\LauncherWrapperPage.json">
       <Generator>MsBuild:Compile</Generator>
     </TypedJSON>
   </ItemGroup>
